# OmniLang

./: .gitignore  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  OmniLang_master_todo.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.md  SPEC_V1.0.md  STRATEGY.md  TODO.md  build.txt  build2.txt  build_core.txt  cargo_check_errors.txt  cliff.toml  clippy_errors.txt  clippy_output.txt  compile_err.txt  compile_log.txt  compile_log2.txt  compile_log3.txt  compile_log4.txt  debug_factorial.txt  debug_factorial_v2.txt  debug_factorial_v3.txt  debug_filtered.txt  debug_log.txt  debug_log2.txt  deny.toml  deps.txt  dummy_yolo.onnx  err.txt  err2.txt  errors.txt  errors2.txt  errors3.txt  errors4.txt  (+58 more)
.github/: copilot-instructions.md
bindings/harmonyos/: CMakeLists.txt  OmniLang.ets  mock_test.cpp  napi_init.cpp
docs/: AI_STRATEGY.md  AetherOS_INSTALL.md  CONTRIBUTING.md  OUTREACH_PACK.md  QUICKSTART.md  RELEASE_NOTES_v1.0.md  ROADMAP.md  WALKTHROUGH.md  api.md  changelog.md  cli.md  getting_started.md  index.html  project_review_v1_0.md  release_v2.1.0_draft.md  walkthrough.md
examples/: 3d_game_demo.omni  actions_loop_showcase.omni  ai_data_analysis.omni  ai_ethics_governance.omni  ai_neural_net.omni  ai_onnx_inference.omni  ai_onnx_multi.omni  ai_sensor_fusion_hub.omni  anti_money_laundering.omni  autonomous_vehicle_3d.omni  bio_genome_editor.omni  blockchain_ledger.omni  comm_hid_cam.omni  comm_serial_bt.omni  comm_wifi_lan.omni  context.json  context_fintech.json  context_smartcity.json  cyber_security_ops.omni  demo.omni  digital_twin_3d_pro.omni  drone_fleet.omni  drone_patrol.omni  dummy_mobilenet.onnx  edge_units_nested.omni  evaluator_features.omni  evaluator_features_context.json  factory_safety.omni  game_2d_platformer.omni  game_3d_arena.omni  game_multiplayer_mesh.omni  game_rpg_quest.omni  game_strategic_command.omni  global_supply_chain.omni  graphic_viz_dashboard.omni  green_data_center.omni  hello.omni  hospital_policy.omni  iron_dome_defense_3d.omni  lambda_hof.omni  (+30 more)
omc/: Cargo.toml  check_errors.txt  check_final.txt  demo.omni  error_log.txt  error_log_utf8.txt  full_output.txt  match_demo.omni  output.error  output.rs  output.txt  output_debug.txt  output_typecheck.txt  output_utf8.txt  rustc_errors.txt
src/: OMNILANG_FUNCTION.md  OMNILANG_GOVERNANCE.md  OMNILANG_JOURNEY.md  OMNILANG_ORIGINS.md  action_abi.rs  ast.rs  c_bindings.rs  cache.rs  checker.rs  codegen.rs  emitter.rs  error.rs  evaluator.rs  interpreter.py  ir.rs  ir_interpreter.rs  jni_bindings.rs  jni_bindings_v2.rs  lexer.py  lexer.rs  lib.rs  linter.rs  lsp_server.rs  main.rs  metrics.rs  observability.rs  omnilang.py  omniroutine.rs  onnx_oracle.rs  parser.py  parser.rs  program_evaluator.rs  runtime.rs  security.rs  types.rs  wasm_bindings.rs
tests/: api-validate.test.cjs  api-validate.test.ts  codegen_native_smoke.rs  codegen_wasm_smoke.rs  evaluator_additional.rs  evaluator_units.rs  evaluator_units_conversion.rs  hof_test.omni  ir_interpreter.rs  ir_snapshot.rs  ir_tests.rs  lambda_test.omni  match_evaluator_test.rs  omniroutine.rs  parser_case_insensitive.rs  parser_examples.rs  parser_negative.rs  parser_units_loops.rs  property_tests.proptest-regressions  property_tests.rs  runtime_exec.rs  runtime_for_binding.rs  stdlib_core.rs  test_examples_batch.py  test_match_lambda.py  test_ort_dynamic.rs  (+5 more)
(+132 files in other folders)
