[package]
name = "omnilang"
version = "1.2.2"
edition = "2021"
license = "MIT"

[features]
default = []
jni_bridge = ["dep:jni"]
c_bridge = []

[dependencies]
jni = { version = "0.21", optional = true }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.134"
wat = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "wasm-bindgen"] }
regex = "1.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.8"
anyhow = "1.0.102"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }
serialport = "4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.1.0"
proptest-derive = "0.7.0"

[[bin]]
name = "omnilang"
path = "src/main.rs"  # Assuming main entry point will be created here or exists

[lib]
name = "omnilang_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }
[[bench]]
name = "loop_bench"
path = "benches/loop_bench.rs"
harness = false
